--- a/web.html
+++ b/web.html
@@ -22,11 +22,24 @@
         color:dimgrey;
         font-size: 30px;
     }
+
+    .box3{
+        background-color: gray;
+        width:100px;
+        height: 300px;
+    }
+
+    .box4{
+        background-color: purple;
+        width:350px;
+        height: 120px;
+    }
 </style>
 <body>
 
     <div class="box1">
         <p class="highligh-text">First Box</p>
+        <div class="box3"></div>
     </div>
 
     <div class="box2">
